--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
